2007-09-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/modules.scm: 
	* gnome/gw/support/defs.scm: Document.

	* doc/guile-gnome-gobject.scm: Remove the concept index; we
	defined no concepts.

	* gnome/gw/support/gobject.scm: Document. Removed the undefined
	construct-argument-list.

	* gnome/gobject/utils.scm: Document.

	* gnome/gobject/gobject.scm: Move around some docs, looks better
	with newer guile-lib.

	* gnome/gobject/generics.scm: Write a bunch about the place of
	generics in guile-gnome. Redefine docs as being on methods; needs
	latest guile-lib to understand, thouh.

2007-08-28  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/generics.scm: Rewrite to export the generics
	normally instead of molesting the root module.

2007-08-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.scm: Fix a URL.

	* gnome/gobject/gsignal.c: 
	* gnome/gobject/gsignal.scm: 
	* gnome/gobject/gobject.c:
	* gnome/gobject/gobject.scm: Document.

	* gnome/gobject/gvalue.scm: 
	* gnome/gobject/gvalue.c: Document.

	* gnome/gobject/gclosure.scm: Document. Change gclosure-invoke to
	be a procedure rather than a method/generic.

	* gnome/gobject/gparameter.scm: 
	* gnome/gobject/gparameter.c: Document. Remove
	gparam-struct-arg-info from the exports list.

	* doc/guile-gnome-gobject.scm (*modules*): Reorder the modules so
	gvalue is before gparameter.

	* gnome/gobject/utils.scm (define-class-with-docs): New exported
	macro.

	* gnome/gobject/gtype.scm: Add a commentary, lots of doc fixups.

	* gnome/gobject/gtype.c: Lots of doc fixups.

	* doc/Makefile.am (doc): Define DOT_DOC_FILES so that we actually
	pick up the .doc files.

	* gnome/gobject/gtype.scm:
	* gnome/gobject/gtype.c (%function->method-public): Removed, this
	hack is no longer necessary (or used).

2007-08-25  Andy Wingo  <wingo@pobox.com>

	* doc/make-texinfo.scm (main): Don't search the load path for the
	file, we know where it is.

	* doc/docs.mk ($(doc).texi): Use the right environments.
