@@ -49,6 +49,8 @@ later version published by the Free Software Foundation.")
      "Shorthand for many common GObject operations")
     ((gnome gobject utils)
      "Miscellaneous useful functions")
+    ((gnome gw generics)
+     "A home for generated generic functions")
     ((gnome gw support gobject)
      "Integration between G-Wrap and GObject types")
     ((gnome gw support defs)
